# prismrag

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  INFO.md  README.md  main.py  pytest.ini  qa_run.ps1  requirements.txt  run-local.bat
.claude/: launch.json
DOC/: AGENT_HANDOFF.md  api.md  architecture.md  article-prismrag-scientific.md  article-prismrag-technical.md  azure-email-aws-dns.md  azure-teardown.md  compliance-program.md  deliberation.md  deployment.md  embedding-strategy.md  enterprise.md  gsc-setup.md  iso27001-control-mapping.md  linkedin-marketing.md  logging-and-cost.md  mcp.md  production-qa.md  pypi-publish.md  technical.md
docs/: ARCHITECTURE.md  GITHUB_PAGES_DEMO.md  README.md  REQUIREMENTS.md  ai-overview.md  architecture.md  comparison.md  concepts.md  demo.html  examples.md  faq.md  llm-context.md  migration.md  overview.md  performance.md  taxonomy-scorecard.md
infra/: container-apps.bicep  container-env.bicep  deploy-container-app.sh  deploy.sh  params.example.json  teardown-azure.ps1
prismrag/: audit_schema.sql  auth_schema.sql  config.py  db.py  (+5 more)
prismrag_patch/: LICENSE  README.md  pyproject.toml
prismrag_patch/prismrag_patch/: __init__.py  client.py  config.py  core.py  license.py  models.py
prismrag_patch/prismrag_patch/adapters/: pgvector.py
prismrag_patch/prismrag_patch/embedding/: deterministic.py
prismrag_patch/prismrag_patch/graph/: builder.py  community.py
prismrag_patch/prismrag_patch/mapping/: base.py  mlp.py  projection.py  rules.py
prismrag_patch/prismrag_patch/pipeline/: append.py  ingest.py  quality.py
prismrag_patch/prismrag_patch/retrieval/: bridge.py  search.py
prismrag_patch/prismrag_patch/store/: __init__.py  base.py  memory.py  pgutil.py  postgres.py  types.py
(+98 files in other folders)
